fixed images for good

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="src/index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>free/faithful</title>
   </head>
   <body class="p-0 m-0 scroll-smooth">
     <div id="root"></div>
